k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: client
        image: iel182/estudo-docker:v20210208.1
        resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
        ports:
        - containerPort: 8080
