k8s/client-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type:  ClusterIP
  selector:
    app: web    
  ports:
  - port: 8080
    targetPort: 8080
