k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:     
       nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
    - http:
        paths:   
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-cluster-ip-service
              port:
                number: 8080
